fix partner landing page tile overflowing (#286)

--- a/liqd_product/assets/scss/components/_tile.scss
+++ b/liqd_product/assets/scss/components/_tile.scss
@@ -79,4 +79,8 @@
             flex: 0 1 30%;
         }
     }
+
+    .tile {
+        min-height: 15em;
+    }
 }
